--- a/src/components/LeftPanel.css
+++ b/src/components/LeftPanel.css
@@ -6,19 +6,26 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
-  background-color: #f4f4f4;
-}
+  box-shadow: 2px 0 5px rgba(155, 150, 150, 0.2);
 
+  background-color: #1E1E1E;
+}
+.search-bar{
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+}
 .new-chat-button {
   padding: 10px 20px;
   border-radius: 5px;
+  margin-top: 10px;
   border: none;
   background-color: #5757d4;/* Matches button color */
   color: white;
   cursor: pointer;
   width: 70%;
   margin-bottom: 20px;
+
 }
 
 .thread-list {
